crates/action-graph/tests/snapshots/action_graph_builder_test__action_graph_builder__run_task_dependencies__can_create_a_chain.snap
---
source: crates/action-graph/tests/action_graph_builder_test.rs
expression: graph.to_dot()
---
digraph {
    0 [ label="SyncWorkspace"]
    1 [ label="SyncProject(deps)"]
    2 [ label="RunTask(deps:chain1)"]
    3 [ label="RunTask(deps:chain2)"]
    4 [ label="RunTask(deps:chain3)"]
    5 [ label="RunTask(deps:chain4)"]
    6 [ label="RunTask(deps:chain5)"]
    1 -> 0 [ label="required"]
    6 -> 1 [ label="required"]
    5 -> 1 [ label="required"]
    5 -> 6 [ label="required"]
    4 -> 1 [ label="required"]
    4 -> 5 [ label="required"]
    3 -> 1 [ label="required"]
    3 -> 4 [ label="required"]
    2 -> 1 [ label="required"]
    2 -> 3 [ label="required"]
}
