crates/action-graph/tests/snapshots/action_graph_builder_test__action_graph_builder__run_task_dependencies__doesnt_include_dependents.snap
---
source: crates/action-graph/tests/action_graph_builder_test.rs
expression: graph.to_dot()
---
digraph {
    0 [ label="SyncWorkspace"]
    1 [ label="SyncProject(deps)"]
    2 [ label="RunTask(deps:base)"]
    1 -> 0 [ label="required"]
    2 -> 1 [ label="required"]
}
