crates/action-graph/tests/snapshots/action_graph_builder_test__action_graph_builder__run_task_dependencies__includes_dependents.snap
---
source: crates/action-graph/tests/action_graph_builder_test.rs
expression: graph.to_dot()
---
digraph {
    0 [ label="SyncWorkspace"]
    1 [ label="SyncProject(deps)"]
    2 [ label="RunTask(deps:base)"]
    3 [ label="SyncProject(deps-external)"]
    4 [ label="RunTask(deps-external:external)"]
    5 [ label="RunTask(deps:parent2)"]
    6 [ label="RunTask(deps:parent1)"]
    1 -> 0 [ label="required"]
    2 -> 1 [ label="required"]
    3 -> 0 [ label="required"]
    3 -> 1 [ label="required"]
    4 -> 3 [ label="required"]
    4 -> 2 [ label="required"]
    5 -> 1 [ label="required"]
    5 -> 2 [ label="required"]
    6 -> 1 [ label="required"]
    6 -> 2 [ label="required"]
}
