crates/action-graph/tests/snapshots/action_graph_builder_test__action_graph_builder__run_task_dependencies__runs_deps_in_serial.snap
---
source: crates/action-graph/tests/action_graph_builder_test.rs
expression: graph.to_dot()
---
digraph {
    0 [ label="SyncWorkspace"]
    1 [ label="SyncProject(deps)"]
    2 [ label="RunTask(deps:serial)"]
    3 [ label="RunTask(deps:b)"]
    4 [ label="RunTask(deps:c)"]
    5 [ label="RunTask(deps:a)"]
    1 -> 0 [ label="required"]
    3 -> 1 [ label="required"]
    4 -> 1 [ label="required"]
    4 -> 3 [ label="required"]
    5 -> 1 [ label="required"]
    5 -> 4 [ label="required"]
    2 -> 1 [ label="required"]
    2 -> 3 [ label="required"]
    2 -> 4 [ label="required"]
    2 -> 5 [ label="required"]
}
