crates/action-graph/tests/snapshots/action_graph_builder_test__action_graph_builder__run_task_dependencies__serial_deps_arent_ordered_after_persistent_deps.snap
---
source: crates/action-graph/tests/action_graph_builder_test.rs
expression: graph.to_dot()
---
digraph {
    0 [ label="SyncWorkspace"]
    1 [ label="SyncProject(proj)"]
    2 [ label="RunPersistentTask(proj:dev)"]
    3 [ label="RunTask(proj:first-build)"]
    4 [ label="RunPersistentTask(proj:server)"]
    5 [ label="RunTask(proj:last-build)"]
    1 -> 0 [ label="required"]
    3 -> 1 [ label="required"]
    4 -> 1 [ label="required"]
    4 -> 3 [ label="required"]
    5 -> 1 [ label="required"]
    5 -> 3 [ label="required"]
    2 -> 1 [ label="required"]
    2 -> 3 [ label="required"]
    2 -> 4 [ label="required"]
    2 -> 5 [ label="required"]
}
