crates/action-graph/tests/snapshots/action_graph_builder_test__action_graph_builder__run_task_dependencies__serial_deps_dont_cycle_on_shared_nodes.snap
---
source: crates/action-graph/tests/action_graph_builder_test.rs
expression: graph.to_dot()
---
digraph {
    0 [ label="SyncWorkspace"]
    1 [ label="SyncProject(lib-a)"]
    2 [ label="RunTask(lib-a:test)"]
    3 [ label="SyncProject(lib-b)"]
    4 [ label="RunTask(lib-b:test)"]
    5 [ label="SyncProject(lib-c)"]
    6 [ label="RunTask(lib-c:test)"]
    7 [ label="SyncProject(app-d)"]
    8 [ label="RunTask(app-d:test)"]
    1 -> 0 [ label="required"]
    2 -> 1 [ label="required"]
    3 -> 0 [ label="required"]
    3 -> 1 [ label="required"]
    4 -> 3 [ label="required"]
    4 -> 2 [ label="required"]
    5 -> 0 [ label="required"]
    5 -> 3 [ label="required"]
    5 -> 1 [ label="required"]
    6 -> 5 [ label="required"]
    6 -> 2 [ label="required"]
    6 -> 4 [ label="required"]
    7 -> 0 [ label="required"]
    7 -> 3 [ label="required"]
    7 -> 5 [ label="required"]
    8 -> 7 [ label="required"]
    8 -> 6 [ label="required"]
    8 -> 4 [ label="required"]
}
