crates/action-graph/tests/snapshots/action_graph_builder_test__action_graph_builder__run_task_dependencies__serial_deps_order_grandchildren.snap
---
source: crates/action-graph/tests/action_graph_builder_test.rs
expression: graph.to_dot()
---
digraph {
    0 [ label="SyncWorkspace"]
    1 [ label="SyncProject(app)"]
    2 [ label="SyncProject(cli)"]
    3 [ label="RunTask(app:build)"]
    4 [ label="RunTask(app:clean)"]
    5 [ label="RunTask(app:build-tasks)"]
    6 [ label="RunTask(cli:build-library-bundle-cli)"]
    7 [ label="RunTask(app:tsc-project)"]
    8 [ label="RunTask(app:prepare-package)"]
    2 -> 0 [ label="required"]
    1 -> 0 [ label="required"]
    1 -> 2 [ label="required"]
    4 -> 1 [ label="required"]
    6 -> 2 [ label="required"]
    7 -> 1 [ label="required"]
    8 -> 1 [ label="required"]
    8 -> 7 [ label="required"]
    5 -> 1 [ label="required"]
    5 -> 6 [ label="required"]
    5 -> 7 [ label="required"]
    5 -> 8 [ label="required"]
    5 -> 4 [ label="required"]
    6 -> 4 [ label="required"]
    7 -> 4 [ label="required"]
    8 -> 4 [ label="required"]
    3 -> 1 [ label="required"]
    3 -> 4 [ label="required"]
    3 -> 5 [ label="required"]
}
